--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -49,7 +49,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Assembly.svg&amp;filetimestamp=20240325203121&amp;.html" class="mw-file-description"><img src="../File/Workbench_Assembly.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=Assembly_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="Assembly Workbench/cs (page does not exist)">Pracovn&iacute; plocha Assembly</a> pro vytv&aacute;&#345;en&iacute; a &#345;e&scaron;en&iacute; mechanick&yacute;ch sestav. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_BIM.svg&amp;filetimestamp=20240524155736&amp;.html" class="mw-file-description"><img src="../File/Workbench_BIM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../index.php?title=BIM_Workbench/cs&amp;action=edit&amp;redlink=1.html" class="new" title="BIM Workbench/cs (page does not exist)">Pracovn&iacute; plocha BIM</a> pro pr&aacute;ci s architektonick&yacute;mi prvky a vytv&aacute;&#345;en&iacute; <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Building_information_modeling">BIM</a> model&#367;. Slu&#269;uje pracovn&iacute; plochu Arch a d&#345;&iacute;ve extern&iacute; pracovn&iacute; plochu BIM, kter&aacute; je k dispozici v <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_CAM.svg&amp;filetimestamp=20240316105021&amp;.html" class="mw-file-description"><img src="../File/Workbench_CAM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../CAM_Workbench.html" title="CAM Workbench">Pracovn&iacute; plocha CAM</a> se pou&#382;&iacute;v&aacute; k vytv&aacute;&#345;en&iacute; instrukc&iacute; G-k&oacute;du. Tato pracovn&iacute; plocha se d&#345;&iacute;ve naz&yacute;vala "Path Workbench" <span style="font-size:small;color:blue;">0.21 and below</span>.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Draft_Workbench.html" title="Draft Workbench">Draft Workbench</a> contains 2D tools and basic 2D and 3D CAD operations.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Draft.svg&amp;filetimestamp=20200404172706&amp;.html" class="mw-file-description"><img src="../File/Workbench_Draft.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Draft_Workbench.html" title="Draft Workbench">Pracovn&iacute; plocha Draft</a> obsahuje 2D n&aacute;stroje a z&aacute;kladn&iacute; 2D a 3D CAD operace.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_FEM.svg&amp;filetimestamp=20240405093343&amp;.html" class="mw-file-description"><img src="../File/Workbench_FEM.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../FEM_Workbench.html" title="FEM Workbench">FEM Workbench</a> provides Finite Element Analysis (FEA) workflow.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Inspection.svg&amp;filetimestamp=20200404172947&amp;.html" class="mw-file-description"><img src="../File/Workbench_Inspection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Inspection_Workbench.html" title="Inspection Workbench">Inspection Workbench</a> is made to give you specific tools for examination of shapes. Still in the early stages of development. <code>D</code></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Material.svg&amp;filetimestamp=20240623140009&amp;.html" class="mw-file-description"><img src="../File/Workbench_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Material_Workbench.html" title="Material Workbench">Material Workbench</a> handles the FreeCAD material system. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
@@ -102,12 +102,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118080716
+Cached time: 20260118080817
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.145 seconds
-Real time usage: 0.284 seconds
+CPU time usage: 0.133 seconds
+Real time usage: 0.208 seconds
 Preprocessor visited node count: 285/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
@@ -118,18 +118,18 @@ Unstrip post&#8208;expand size: 4412/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.824      1 -total
- 39.37%   11.741      1 Template:Userdocnavi/cs
- 13.75%    4.101      1 Template:Navigation_menu_2
- 10.25%    3.058      2 Template:Docnav
-  9.73%    2.902      3 Template:Version
-  9.23%    2.753      1 Template:MenuCommand
-  8.70%    2.593      2 Template:VersionMinus
-  8.60%    2.564      5 Template:Incode
-  8.55%    2.551      1 Template:Button
+100.00%   20.336      1 -total
+ 31.29%    6.364      1 Template:Userdocnavi/cs
+ 16.04%    3.262      3 Template:Version
+ 15.72%    3.197      2 Template:Docnav
+ 12.97%    2.637      1 Template:Navigation_menu_2
+  8.90%    1.810      5 Template:Incode
+  8.10%    1.648      1 Template:Button
+  7.18%    1.460      1 Template:MenuCommand
+  6.77%    1.376      2 Template:VersionMinus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118080716 and revision id 1739868. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118080817 and revision id 1739870. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
