--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -55,7 +55,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Material.svg&amp;filetimestamp=20240623140009&amp;.html" class="mw-file-description"><img src="../File/Workbench_Material.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Material_Workbench.html" title="Material Workbench">Pracovn&iacute; plocha Material</a> zpracov&aacute;v&aacute; syst&eacute;m materi&aacute;l&#367; FreeCADu. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Mesh.svg&amp;filetimestamp=20200404173024&amp;.html" class="mw-file-description"><img src="../File/Workbench_Mesh.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Mesh_Workbench.html" title="Mesh Workbench">Pracovn&iacute; plocha Mesh</a> pro pr&aacute;ci s troj&uacute;heln&iacute;kov&yacute;mi s&iacute;t&#283;mi.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_OpenSCAD.svg&amp;filetimestamp=20200404173116&amp;.html" class="mw-file-description"><img src="../File/Workbench_OpenSCAD.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../OpenSCAD_Workbench.html" title="OpenSCAD Workbench">Pracovn&iacute; plocha OpenSCAD</a> pro interoperabilitu s OpenSCAD a opravu historie model&#367; <a href="../Constructive_solid_geometry.html" title="Constructive solid geometry">konstruktivn&iacute; pevn&eacute; geometrie</a> (CSG). <code>D</code></li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Part_Workbench.html" title="Part Workbench">Part Workbench</a> for working with geometric primitives and boolean operations.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Workbench.html" title="Part Workbench">Pracovn&iacute; plocha Part</a> pro pr&aacute;ci s geometrick&yacute;mi primitivy a booleovsk&yacute;mi operacemi.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">Part Design Workbench</a> for building Part shapes from sketches.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Points.svg&amp;filetimestamp=20200404174800&amp;.html" class="mw-file-description"><img src="../File/Workbench_Points.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Points_Workbench.html" title="Points Workbench">Points Workbench</a> for working with point clouds.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Reverse_Engineering.svg&amp;filetimestamp=20200404173756&amp;.html" class="mw-file-description"><img src="../File/Workbench_Reverse_Engineering.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench">Reverse Engineering Workbench</a> is intended to provide specific tools to convert shapes/solids/meshes into parametric FreeCAD-compatible features.</li></ul>
@@ -102,12 +102,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118081630
+Cached time: 20260118082044
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.136 seconds
-Real time usage: 0.207 seconds
+CPU time usage: 0.140 seconds
+Real time usage: 0.269 seconds
 Preprocessor visited node count: 285/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
@@ -118,18 +118,18 @@ Unstrip post&#8208;expand size: 4412/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.879      1 -total
- 38.66%    6.525      1 Template:Userdocnavi/cs
- 16.92%    2.856      1 Template:Navigation_menu_2
- 14.54%    2.455      2 Template:Docnav
-  9.20%    1.553      5 Template:Incode
-  9.08%    1.533      1 Template:MenuCommand
-  8.13%    1.373      3 Template:Version
-  7.62%    1.286      2 Template:VersionMinus
-  7.37%    1.244      1 Template:Button
+100.00%   31.484      1 -total
+ 40.42%   12.727      1 Template:Userdocnavi/cs
+ 11.01%    3.466      1 Template:Navigation_menu_2
+ 10.76%    3.389      2 Template:Docnav
+ 10.15%    3.196      3 Template:Version
+  9.39%    2.956      5 Template:Incode
+  8.80%    2.770      2 Template:VersionMinus
+  8.68%    2.732      1 Template:Button
+  7.14%    2.249      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118081630 and revision id 1739880. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118082044 and revision id 1739882. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
