Created page with "* [[Image:Workbench_Points.svg|32px]] [[Points_Workbench|Pracovní plocha Points]] pro práci s mračny bodů"

--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -57,7 +57,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_OpenSCAD.svg&amp;filetimestamp=20200404173116&amp;.html" class="mw-file-description"><img src="../File/Workbench_OpenSCAD.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../OpenSCAD_Workbench.html" title="OpenSCAD Workbench">Pracovn&iacute; plocha OpenSCAD</a> pro interoperabilitu s OpenSCAD a opravu historie model&#367; <a href="../Constructive_solid_geometry.html" title="Constructive solid geometry">konstruktivn&iacute; pevn&eacute; geometrie</a> (CSG). <code>D</code></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Workbench.html" title="Part Workbench">Pracovn&iacute; plocha Part</a> pro pr&aacute;ci s geometrick&yacute;mi primitivy a booleovsk&yacute;mi operacemi.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">Pracovn&iacute; plocha Part Design</a> pro vytv&aacute;&#345;en&iacute; tvar&#367; d&iacute;l&#367; ze skic.</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Points.svg&amp;filetimestamp=20200404174800&amp;.html" class="mw-file-description"><img src="../File/Workbench_Points.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Points_Workbench.html" title="Points Workbench">Points Workbench</a> for working with point clouds.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Points.svg&amp;filetimestamp=20200404174800&amp;.html" class="mw-file-description"><img src="../File/Workbench_Points.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Points_Workbench.html" title="Points Workbench">Pracovn&iacute; plocha Points</a> pro pr&aacute;ci s mra&#269;ny bod&#367;</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Reverse_Engineering.svg&amp;filetimestamp=20200404173756&amp;.html" class="mw-file-description"><img src="../File/Workbench_Reverse_Engineering.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Reverse_Engineering_Workbench.html" title="Reverse Engineering Workbench">Reverse Engineering Workbench</a> is intended to provide specific tools to convert shapes/solids/meshes into parametric FreeCAD-compatible features.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Robot.svg&amp;filetimestamp=20200404173908&amp;.html" class="mw-file-description"><img src="../File/Workbench_Robot.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Robot_Workbench.html" title="Robot Workbench">Robot Workbench</a> for studying robot movements. Currently unmaintained. <code>D</code></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher Workbench</a> for working with geometry-constrained sketches.</li></ul>
@@ -102,11 +102,11 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118082208
+Cached time: 20260118082255
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.162 seconds
+CPU time usage: 0.150 seconds
 Real time usage: 0.294 seconds
 Preprocessor visited node count: 285/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
@@ -118,18 +118,18 @@ Unstrip post&#8208;expand size: 4412/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.213      1 -total
- 37.54%    8.714      1 Template:Userdocnavi/cs
- 17.34%    4.026      1 Template:Navigation_menu_2
- 13.17%    3.056      2 Template:Docnav
- 10.18%    2.363      1 Template:MenuCommand
-  9.04%    2.098      3 Template:Version
-  8.56%    1.988      1 Template:Button
-  8.36%    1.940      2 Template:VersionMinus
-  8.28%    1.921      5 Template:Incode
+100.00%   19.993      1 -total
+ 37.36%    7.470      1 Template:Userdocnavi/cs
+ 16.51%    3.300      1 Template:Navigation_menu_2
+ 16.31%    3.261      2 Template:Docnav
+  9.73%    1.946      3 Template:Version
+  8.04%    1.607      1 Template:MenuCommand
+  7.85%    1.570      1 Template:Button
+  7.49%    1.497      2 Template:VersionMinus
+  7.25%    1.450      5 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118082208 and revision id 1739884. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118082254 and revision id 1739886. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
