Created page with "* [[Image:Workbench_TechDraw.svg|32px]] [[TechDraw_Workbench|Pracovní plocha TechDraw]] pro vytváření technických výkresů z 3D modelů. Je nástupcem [[Drawing_Workbench|Pracovní plochy Drawing]]."

--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -15,7 +15,7 @@
 <li><a href="../ro/Workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Ateliere (12% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../fi/Workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Workbenches (2% translated)" lang="fi" dir="ltr">suomi</a></li>
 <li><a href="../sv/Workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Workbenches (5% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="cs" dir="ltr">&#269;e&scaron;tina</span></li>
 <li><a href="../bg/Workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="&#1056;&#1072;&#1073;&#1086;&#1090;&#1085;&#1080; &#1084;&#1072;&#1089;&#1080; (10% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><a href="../ru/Workbenches.html" class="mw-pt-progress mw-pt-progress--complete" title="&#1042;&#1077;&#1088;&#1089;&#1090;&#1072;&#1082;&#1080; (100% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Workbenches (2% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -63,7 +63,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Pracovn&iacute; plocha Sketcher</a> pro pr&aacute;ci s geometricky v&aacute;zan&yacute;mi n&aacute;&#269;rtky.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Spreadsheet.svg&amp;filetimestamp=20240527155805&amp;.html" class="mw-file-description"><img src="../File/Workbench_Spreadsheet.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Spreadsheet_Workbench.html" title="Spreadsheet Workbench">Pracovn&iacute; plocha Spreadsheet</a> pro vytv&aacute;&#345;en&iacute; a manipulaci s daty v tabulk&aacute;ch.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Surface.svg&amp;filetimestamp=20210130230011&amp;.html" class="mw-file-description"><img src="../File/Workbench_Surface.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Surface_Workbench.html" title="Surface Workbench">Pracovn&iacute; plocha Surface</a> poskytuje n&aacute;stroje pro vytv&aacute;&#345;en&iacute; a &uacute;pravy povrch&#367;. Je podobn&yacute; mo&#382;nosti <a href="../Part_Builder.html" title="Part Builder">Part Builder</a> Face from edges (Vytvo&#345;it plochu z hran).</li></ul>
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">TechDraw Workbench</a> for producing technical drawings from 3D models. It is the successor of the <a href="../Drawing_Workbench.html" title="Drawing Workbench">Drawing Workbench</a>.</li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">Pracovn&iacute; plocha TechDraw</a> pro vytv&aacute;&#345;en&iacute; technick&yacute;ch v&yacute;kres&#367; z 3D model&#367;. Je n&aacute;stupcem <a href="../Drawing_Workbench.html" title="Drawing Workbench">Pracovn&iacute; plochy Drawing</a>.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Workbench_Test.svg&amp;filetimestamp=20200404174253&amp;.html" class="mw-file-description"><img src="../File/Workbench_Test.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> The <a href="../Testing.html" title="Testing">Test Framework Workbench</a> is for debugging FreeCAD. <code>D</code></li></ul>
 <h3><span class="mw-headline" id="Obsolete">Obsolete</span></h3>
 <p>The following workbenches are no longer included after version 0.21:
@@ -102,34 +102,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118083220
+Cached time: 20260118083329
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.161 seconds
-Real time usage: 0.389 seconds
+CPU time usage: 0.154 seconds
+Real time usage: 0.268 seconds
 Preprocessor visited node count: 285/1000000
 Post&#8208;expand include size: 7999/2097152 bytes
 Template argument size: 2367/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4412/5000000 bytes
+Unstrip post&#8208;expand size: 4413/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.097      1 -total
- 29.00%    8.439      1 Template:Userdocnavi/cs
- 17.93%    5.218      2 Template:Docnav
- 11.81%    3.436      3 Template:Version
- 11.35%    3.302      5 Template:Incode
-  9.96%    2.899      1 Template:Navigation_menu_2
-  9.66%    2.811      2 Template:VersionMinus
-  8.53%    2.483      1 Template:Button
-  7.46%    2.170      1 Template:MenuCommand
+100.00%   24.187      1 -total
+ 34.70%    8.394      1 Template:Userdocnavi/cs
+ 15.36%    3.714      1 Template:Navigation_menu_2
+ 15.00%    3.627      2 Template:Docnav
+ 14.57%    3.524      1 Template:MenuCommand
+  8.77%    2.122      3 Template:Version
+  8.00%    1.934      5 Template:Incode
+  7.10%    1.718      2 Template:VersionMinus
+  6.27%    1.516      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118083219 and revision id 1739896. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118083329 and revision id 1739898. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
