Created page with "Stránka [[External_workbenches|externí pracovní plochy]] obsahuje seznam všech, které jsou této komunitě známy. Většinu z nich lze snadno nainstalovat přímo z FreeCADu pomocí [[Std_AddonMgr|Spávce doplňků], kterého najdete v menu {{MenuCommand|Nástroje → [[Image:Std_AddonMgr.svg|24px]] Správce doplňků}}."

--- a/wiki/cs/Workbenches.html
+++ b/wiki/cs/Workbenches.html
@@ -81,8 +81,12 @@
 </p>
 <h3><span id="Extern.C3.AD_pracovn.C3.AD_plochy"></span><span class="mw-headline" id="Extern&iacute;_pracovn&iacute;_plochy">Extern&iacute; pracovn&iacute; plochy</span></h3>
 <p>Pracovn&iacute; plochy FreeCADu se snadno programuj&iacute; v jazyce <a href="../Python.html" title="Python">Python</a>, proto mnoho lid&iacute; vyv&iacute;j&iacute; dal&scaron;&iacute; pracovn&iacute; plochy mimo hlavn&iacute; v&yacute;vojovou oblast FreeCADu.
-</p><p>The <a href="../External_workbenches.html" title="External workbenches">external workbenches</a> page lists all that are known to this community. Most are easily installable from within FreeCAD, using the <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>, found under menu <b>Tools &rarr; <span typeof="mw:File"><a href="../index.php?title=Std_AddonMgr.svg&amp;filetimestamp=20240704212012&amp;.html" class="mw-file-description"><img src="../File/Std_AddonMgr.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Addon manager</b>. 
-</p><p><br>
+</p>
+<div class="mw-translate-fuzzy">
+<p>Str&aacute;nka <a href="../External_workbenches.html" title="External workbenches">extern&iacute; pracovn&iacute; plochy</a> obsahuje seznam v&scaron;ech, kter&eacute; jsou t&eacute;to komunit&#283; zn&aacute;my. V&#283;t&scaron;inu z nich lze snadno nainstalovat p&#345;&iacute;mo z FreeCADu pomoc&iacute; [[Std_AddonMgr|Sp&aacute;vce dopl&#328;k&#367;], kter&eacute;ho najdete v menu <b>N&aacute;stroje &rarr; <span typeof="mw:File"><a href="../index.php?title=Std_AddonMgr.svg&amp;filetimestamp=20240704212012&amp;.html" class="mw-file-description"><img src="../File/Std_AddonMgr.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Spr&aacute;vce dopl&#328;k&#367;</b>.
+</p>
+</div> 
+<p><br>
 </p>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../cs/Property_View.html" title="Property View/cs">Zobrazen&iacute; vlastnost&iacute;</a></div>
@@ -106,15 +110,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118084507
+Cached time: 20260118084734
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.119 seconds
-Real time usage: 0.176 seconds
-Preprocessor visited node count: 287/1000000
-Post&#8208;expand include size: 7999/2097152 bytes
-Template argument size: 2367/2097152 bytes
+CPU time usage: 0.126 seconds
+Real time usage: 0.246 seconds
+Preprocessor visited node count: 288/1000000
+Post&#8208;expand include size: 8008/2097152 bytes
+Template argument size: 2376/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -122,18 +126,18 @@ Unstrip post&#8208;expand size: 4413/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.290      1 -total
- 34.69%    4.263      1 Template:Userdocnavi/cs
- 16.72%    2.055      1 Template:Navigation_menu_2
- 16.09%    1.978      2 Template:Docnav
- 10.24%    1.258      5 Template:Incode
-  9.43%    1.159      3 Template:Version
-  8.41%    1.033      1 Template:MenuCommand
-  7.55%    0.928      2 Template:VersionMinus
-  7.25%    0.891      1 Template:Button
+100.00%   20.525      1 -total
+ 33.69%    6.916      1 Template:Userdocnavi/cs
+ 16.69%    3.426      3 Template:Version
+ 12.94%    2.655      1 Template:Navigation_menu_2
+ 11.60%    2.380      2 Template:Docnav
+ 11.44%    2.349      2 Template:VersionMinus
+  9.14%    1.877      5 Template:Incode
+  6.29%    1.292      1 Template:Button
+  6.18%    1.268      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118084506 and revision id 1739920. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19012-0!canonical and timestamp 20260118084734 and revision id 1739922. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
