Created page with "* [[Image:Fasteners_ASMEB18.6.3.9A.svg|32px]] '''ASME B18.6.3.9A''' UNC-Flachkopfschraube mit Schlitz."

--- a/wiki/de/Fasteners_Workbench.html
+++ b/wiki/de/Fasteners_Workbench.html
@@ -137,9 +137,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.6.1.4.svg&amp;filetimestamp=20240220204028&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.6.1.4.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME B18.6.1.4</b> Ovale Senkkopf-Holzschraube mit Schlitz.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.6.3.1A.svg&amp;filetimestamp=20210815113312&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.6.3.1A.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME B18.6.3.1A</b> UNC Senkkopfschraube mit Schlitz.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.6.3.4A.svg&amp;filetimestamp=20240220204211&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.6.3.4A.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME B18.6.3.4A</b> UNC-Schlitzschraube mit ovalem Senkkopf.</li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.6.3.9A.svg&amp;filetimestamp=20240220204234&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.6.3.9A.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME B18.6.3.9A</b> UNC slotted pan head screw.</li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.6.3.9A.svg&amp;filetimestamp=20240220204234&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.6.3.9A.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME B18.6.3.9A</b> UNC-Flachkopfschraube mit Schlitz.</li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Fasteners_ASMEB18.6.3.10A.svg&amp;filetimestamp=20240220204053&amp;.html" class="mw-file-description"><img src="../File/Fasteners_ASMEB18.6.3.10A.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span> <b>ASME B18.6.3.10A</b> UNC Slotted fillister head screw.</li></ul>
 </div>
@@ -429,13 +427,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112134023
+Cached time: 20260118085018
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.498 seconds
-Real time usage: 0.754 seconds
-Preprocessor visited node count: 706/1000000
+CPU time usage: 0.534 seconds
+Real time usage: 1.091 seconds
+Preprocessor visited node count: 705/1000000
 Post&#8208;expand include size: 7106/2097152 bytes
 Template argument size: 1357/2097152 bytes
 Highest expansion depth: 8/100
@@ -445,19 +443,19 @@ Unstrip post&#8208;expand size: 1775/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.843      1 -total
- 27.81%    8.021      1 Template:Fasteners_Tools_navi/de
- 20.44%    5.896      7 Template:PropertyData/de
-  9.70%    2.797      7 Template:Variable
-  9.34%    2.695      1 Template:VersionPlus/de
-  8.41%    2.426      2 Template:Caption
-  8.07%    2.328      7 Template:MenuCommand
-  6.92%    1.995      1 Template:TOCright
-  6.77%    1.952      1 Template:Button
-  6.45%    1.860      1 Template:TRUE
+100.00%   49.226      1 -total
+ 23.88%   11.753      1 Template:Fasteners_Tools_navi/de
+ 23.84%   11.738      7 Template:PropertyData/de
+ 16.57%    8.156      1 Template:VersionPlus/de
+ 12.88%    6.338      7 Template:Variable
+ 11.17%    5.497      1 Template:TRUE
+  5.85%    2.880      2 Template:Caption
+  4.92%    2.424      1 Template:TOCright
+  4.78%    2.352      1 Template:Navigation_menu_2
+  4.49%    2.210      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260112134022 and revision id 1737528. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169767-0!canonical and timestamp 20260118085016 and revision id 1739926. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
