Created page with "==Úvod=="

--- a/wiki/cs/Std_Base.html
+++ b/wiki/cs/Std_Base.html
@@ -20,7 +20,9 @@
 </div>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=Freecad.svg&amp;filetimestamp=20240704193018&amp;.html" class="mw-file-description"><img src="../File/Freecad.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="48" data-file-height="48"></a><figcaption>Std Base icon</figcaption></figure>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
+<p><span id="Introduction"></span>
+</p>
+<h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <p><b>Std Base</b> is not really a workbench, but rather a category of 'standard' commands and tools that can be used in all workbenches.
 </p>
 <h2><span class="mw-headline" id="Tools">Tools</span></h2>
@@ -142,13 +144,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118090208
+Cached time: 20260118090216
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.129 seconds
-Real time usage: 0.189 seconds
-Preprocessor visited node count: 544/1000000
+CPU time usage: 0.160 seconds
+Real time usage: 0.210 seconds
+Preprocessor visited node count: 545/1000000
 Post&#8208;expand include size: 29096/2097152 bytes
 Template argument size: 11637/2097152 bytes
 Highest expansion depth: 5/100
@@ -158,18 +160,18 @@ Unstrip post&#8208;expand size: 2371/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.660      1 -total
- 46.43%   11.914      1 Template:Std_Base_navi/cs
- 25.30%    6.492      2 Template:Navigation_menu_2
- 20.27%    5.202      1 Template:Userdocnavi/cs
-  7.19%    1.846      1 Template:TOCright
-  6.64%    1.705      2 Template:Docnav
-  6.14%    1.574      6 Template:VersionPlus
-  5.23%    1.341      1 Template:StdMenu
-  4.01%    1.029      8 Template:Version
+100.00%   38.035      1 -total
+ 38.93%   14.808      1 Template:Std_Base_navi/cs
+ 25.92%    9.857      2 Template:Navigation_menu_2
+ 12.51%    4.759      1 Template:Userdocnavi/cs
+ 11.01%    4.187      2 Template:Docnav
+ 10.30%    3.917      6 Template:VersionPlus
+  9.04%    3.437      8 Template:Version
+  7.25%    2.756      1 Template:TOCright
+  6.85%    2.607      1 Template:StdMenu
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118090208 and revision id 1739968. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410500-0!canonical and timestamp 20260118090215 and revision id 1739971. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
